fixed social media gap

--- a/style2.css
+++ b/style2.css
@@ -16,13 +16,12 @@ body {
 }
 #socialmedia {
     float: right;
+
 }
 
 #facebook {
   color: white;
   cursor: pointer;
-  margin-top: 25%;
-
 }
 #facebook:hover {
   background-color: #0319c2;
